Fixed gallery main focused height overflow by using css background image and contain property

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,12 +35,30 @@ a:active, a:visited {
   display: flex;
   justify-content: center;
   align-items:center;
+  position: relative;
+}
 
-  img{
-    max-width: calc(100% - 20px);
-    box-shadow: 5px 5px 20px rgba(0,0,0,0.7);
-
-  }
+#selection{
+  max-width: calc(100% - 20px);
+  // box-shadow: 5px 5px 20px rgba(0,0,0,0.7);
+  position: absolute;
+  top:10px;
+  left:10px;
+  right:10px;
+  bottom:10px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  -webkit-filter: drop-shadow( 5px 5px 5px rgba(0,0,0,0.7) );
+   filter: drop-shadow( 5px 5px 5px rgba(0,0,0,0.7) );
+}
+#logo{
+  opacity: 0.3;
+  position: absolute;
+  left:15px;
+  top:20px;
+  width: 60px;
+  z-index: 1000;
 }
 
 #gallery-selector{
@@ -51,30 +69,8 @@ a:active, a:visited {
   justify-content: space-around;
   align-items: flex-start;
   overflow-y: auto;
-  padding-top:85px;
   padding-bottom:20px;
   position: relative;
-
-  header{
-    position: fixed;
-    top:0;
-  }
-
-  #header{
-    background-color: black;
-    text-align: center;
-    width: 100%;
-    height:100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0.6;
-
-
-    img{
-      width: 100px;
-    }
-  }
 }
 
 @keyframes fadeIn {
